@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4
-AM_CFLAGS = -Wall ${PCAP_CFLAGS}
+AM_CFLAGS = -Wall ${PCAP_CFLAGS} -I/home/ext/prefix/pfring/include
 
 lib_LTLIBRARIES = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la libcap_marc-07.la
 bin_PROGRAMS = 
@@ -69,11 +69,12 @@ nobase_include_HEADERS =    \
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libcap_stream-0.7.pc libcap_filter-0.7.pc libcap_utils-0.7.pc libcap_marc-0.7.pc
 
-libcap_stream_07_la_LDFLAGS = -version-info 1:0:1
-libcap_stream_07_la_LIBADD = libcap_utils-07.la libcap_filter-07.la
+libcap_stream_07_la_LDFLAGS = -version-info 1:0:1 -lpfring -L/home/ext/prefix/pfring/lib
+libcap_stream_07_la_LIBADD = libcap_utils-07.la libcap_filter-07.la -lpfring -lpcap
 libcap_stream_07_la_SOURCES =  \
 	stream.c stream.h   \
 	stream_ethernet.c   \
+	stream_pfring.c     \
 	stream_file.c
 
 libcap_utils_07_la_LDFLAGS = -version-info 0:1:0
