@@ -4,6 +4,7 @@ caputils-0.7.7
   * More statistics and debugging messages.
   * Support for AND/OR filters.
   * Additional functions for developers
+  * support for PF_RING when doing ethernet capture.
 
 caputils-0.7.6
 --------------
